--- a/ziften.css
+++ b/ziften.css
@@ -39,7 +39,7 @@ text.actor {
 }
 
 .messageText {
-    fill:white;
+    fill:black;
     stroke:none;
     font-family: 'trebuchet ms', verdana, arial;
     font-size:14px;
